driver checkbox wireing

--- a/cvManager/View/AddCondidateView.xaml
+++ b/cvManager/View/AddCondidateView.xaml
@@ -7,7 +7,7 @@
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp" d:DataContext="{d:DesignInstance Type=viewModel:AddCondidateViewModel}"
              xmlns:viewModel="clr-namespace:cvManager.ViewModel" 
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="800">
+             d:DesignHeight="650" d:DesignWidth="800">
     <UserControl.DataContext>
         <viewModel:AddCondidateViewModel/>
     </UserControl.DataContext>
@@ -475,7 +475,12 @@
                                         AlignmentX="Left"/>
                         </ComboBox.Background-->
                     <!--/TextBox-->
-                    <TextBlock Text="permis de conduire"
+
+
+
+                    <!--/the old driver licence-->
+                    
+                    <!--TextBlock Text="permis de conduire"
                                     Foreground="DarkGray"
                                     FontSize="12"
                                     FontWeight="Medium"
@@ -496,7 +501,7 @@
                                     VerticalContentAlignment="Center"
                                     Margin="0,5,0,0"
                                     Padding="20,0,0,0"
-                              Background="Transparent"/>
+                              Background="Transparent"/-->
 
                     
 
@@ -513,45 +518,30 @@
                                     Foreground="DarkGray"
                                     FontSize="12"
                                     FontWeight="Medium"
-                                    FontFamily="Montserrat"                             
-                                    Margin="0,3,0,0"/>
+                                                                
+                                    Margin="0,15,0,7"/>
                     <StackPanel Orientation="Horizontal"  Margin="10,0,10,10" HorizontalAlignment="Center" >
-                        
-                        <CheckBox Background="Gray"  Margin="0,0,30,0" IsChecked="{Binding AM_Checked}">
-                            <TextBlock Foreground="White">AM</TextBlock>
-                        </CheckBox>
-                        <CheckBox Background="Gray" Margin="0,0,30,0" IsChecked="{Binding A1_Checked}">
-                            <TextBlock Foreground="White">A1</TextBlock>
-                        </CheckBox>
-                        <CheckBox Background="Gray" Margin="0,0,30,0" IsChecked="{Binding A_Checked}">
-                            <TextBlock Foreground="White">A</TextBlock>
-                        </CheckBox>
-                        
+
+                        <CheckBox Background="Gray" Content="AM"  Margin="0,0,30,0" IsChecked="{Binding AM_Checked , Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+                        <CheckBox Background="Gray" Content="A1" Margin="0,0,30,0" IsChecked="{Binding A1_Checked, Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+                        <CheckBox Background="Gray" Content="A" Margin="0,0,30,0" IsChecked="{Binding A_Checked, Mode=TwoWay}"  FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+
+
                     </StackPanel>
                     <StackPanel Orientation="Horizontal"  Margin="10,0,10,10" HorizontalAlignment="Center">
 
-                        <CheckBox Background="Gray" Margin="0,0,42,0" IsChecked="{Binding B_Checked}" >
-                            <TextBlock Foreground="White">B</TextBlock>
-                        </CheckBox>
-                        <CheckBox Background="Gray" Margin="0,0,30,0" IsChecked="{Binding EB_Checked}" >
-                            <TextBlock Foreground="White">EB</TextBlock>
-                        </CheckBox>
-                        <CheckBox Background="Gray" Margin="0,0,30,0" IsChecked="{Binding C_Checked}" >
-                            <TextBlock Foreground="White">C</TextBlock>
-                        </CheckBox>
-                        
+                        <CheckBox Background="Gray" Content="B" Margin="0,0,42,0" IsChecked="{Binding B_Checked , Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12" />
+                        <CheckBox Background="Gray" Content="EB" Margin="0,0,30,0" IsChecked="{Binding EB_Checked , Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+                        <CheckBox Background="Gray" Content="C" Margin="0,0,30,0" IsChecked="{Binding C_Checked , Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+
+
                     </StackPanel>
                     <StackPanel Orientation="Horizontal"  Margin="10,0,10,10" HorizontalAlignment="Center">
 
-                        <CheckBox Background="Gray" Margin="0,0,35,0"  IsChecked="{Binding EC_Checked}">
-                            <TextBlock Foreground="White">EC</TextBlock>
-                        </CheckBox>
-                        <CheckBox Background="Gray"  Margin="0,0,35,0" IsChecked="{Binding D_Checked}">
-                            <TextBlock Foreground="White">D</TextBlock>
-                        </CheckBox>
-                        <CheckBox Background="Gray" Margin="0,0,30,0" IsChecked="{Binding ED_Checked}" >
-                            <TextBlock Foreground="White">ED</TextBlock>
-                        </CheckBox>
+                        <CheckBox Background="Gray" Content="EC" Margin="0,0,35,0"  IsChecked="{Binding EC_Checked , Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+                        <CheckBox Background="Gray" Content="D" Margin="0,0,35,0" IsChecked="{Binding D_Checked , Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+                        <CheckBox Background="Gray" Content="ED" Margin="0,0,30,0" IsChecked="{Binding ED_Checked , Mode=TwoWay}" FontFamily="Montserrat"  Foreground="White" FontSize="12"/>
+
                     </StackPanel>
                     
 
